--- a/app/assets/stylesheets/widgets/single_column/call_to_action_3_up.scss
+++ b/app/assets/stylesheets/widgets/single_column/call_to_action_3_up.scss
@@ -1,10 +1,7 @@
 .call-to-action-3-up-widget {
 	padding: $one-column-widget-spacing 0;
-
-	&.call-to-action-3-up-widget__white-container {
-		background-color: #ffffff;
-	}
-
+	background-color: #eaeaea;
+	
 	.outer-container {
 		@include outer-container();
 	}
