--- a/app/views/1_column/hero_side_panel.html.erb
+++ b/app/views/1_column/hero_side_panel.html.erb
@@ -5,6 +5,7 @@
     primary_content:
       - hero/side_panel
       - single_column/call_to_action_block
+      - single_column/chapman_events_feed
       - single_column/messaging_1_column_facts
   YAML
 %>
