getting featured event changes from master

--- a/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
+++ b/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
@@ -393,5 +393,9 @@ $tile_width: 335px;
 .chapman-social-feed-widget__dark-bg {
 	background-color: $black;
 	color: white;
+
 }
 
+	.social-link.instagram path {
+		fill: white;
+	}
