--- a/app/assets/stylesheets/widgets/single_column/contact_footer.scss
+++ b/app/assets/stylesheets/widgets/single_column/contact_footer.scss
@@ -72,7 +72,7 @@
 		font-style: center;
 	}
 
-	ul.social-media-list {
+	ul.social-icon-list {
 		li {
 			display: inline-block;
 			margin: 0 5px;
