--- a/app/views/widgets/single_column/_chapman_social_feed.html
+++ b/app/views/widgets/single_column/_chapman_social_feed.html
@@ -1,9 +1,10 @@
-<div class="chapman-social-feed-widget chapman-social-feed-widget__has-social-icons">
+<div class="chapman-social-feed-widget chapman-social-feed-widget__has-social-icons chapman-social-feed-widget__dark-bg">
   <div class="outer-container">
     <h2 class="chapman-social-feed-title">Chapman University Social Media</h2>
     <div class="chapman-social-feed-icons">
     	<ul class="social-icon-list">
-    	  <li><a class="social-link instagram" href="http://www.instagram.com/chapmanu"style="background-image: url(<%= image_url 'instagram.svg' %>);"></a></li>
+    	 <!--  <li><a class="social-link instagram" href="http://www.instagram.com/chapmanu" style="background-image: url(<%= image_url 'instagram.svg' %>);"></a></li> -->
+          <li><a class="social-link instagram" href="http://www.instagram.com/chapmanu"><object type="image/svg+xml" data="<%= image_url 'instagram.svg' %>" style="fill: #fff;"><img src="<%= image_url 'instagram.svg' %>"></object></a></li>
     	  <li><a class="social-link facebook" href="http://www.facebook.com/ChapmanUniversity" style="background-image: url(<%= image_url 'facebook.svg' %>);"></a></li>
     	  <li><a class="social-link twitter" href="http://twitter.com/#!/chapmanu" style="background-image: url(<%= image_url 'twitter.svg' %>);"></a></li>
     	</ul>
