fix hero dropdown border color

--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -186,6 +186,7 @@
         box-shadow: none;
         margin: 0;
         height: auto;
+        border: 2px solid #000000;
         border-radius: 24px;
         background-position: center right;
         background-repeat: no-repeat;
