--- a/app/assets/stylesheets/components/icomoon.scss
+++ b/app/assets/stylesheets/components/icomoon.scss
@@ -1,215 +1,241 @@
 @font-face {
-	font-family: 'icomoon';
-	src:font-url('icomoon.eot');
-	src:font-url('icomoon.eot?#iefix') format('embedded-opentype'),
-		font-url('icomoon.woff') format('woff'),
-		font-url('icomoon.ttf') format('truetype'),
-		font-url('icomoon.svg#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'icomoon';
+    src:font-url('icomoon.eot');
+    src:font-url('icomoon.eot?#iefix') format('embedded-opentype'),
+    font-url('icomoon.woff') format('woff'),
+    font-url('icomoon.ttf') format('truetype'),
+    font-url('icomoon.svg#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
-/* Use the following CSS code if you want to use data attributes for inserting your icons */
-[data-icon]:before {
-	font-family: 'icomoon';
-	content: attr(data-icon);
-	speak: none;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-/* Use the following CSS code if you want to have a class per icon */
-/*
-Instead of a list of all class selectors,
-you can use the generic selector below, but it's slower:
-[class*="icon-"] {
-*/
-.icon:before, .icon-arrows_up:before,.icon-lab3:before,.icon-hand:before,.icon-bed:before,.icon-bathroom:before,.icon-arrows_down:before,.icon-aid:before,.icon-accessibility2:before,.icon-ladder:before,.icon-books:before,.icon-graduation:before,.icon-book2:before,.icon-direction:before,.icon-library2:before,.icon-smiley:before,.icon-heart:before,.icon-bookmark:before,.icon-list:before,.icon-location:before,.icon-link:before,.icon-earth:before,.icon-envelop:before,.icon-pencil:before,.icon-users:before,.icon-address-book:before,.icon-tree:before,.icon-steps:before,.icon-office:before,.icon-star3:before,.icon-pencil-2:before,.icon-heart3:before,.icon-square:before,.icon-calculate2:before,.icon-search3:before,.icon-location-2:before,.icon-print:before,.icon-books-2:before,.icon-pin:before,.icon-calendar4:before,.icon-mic3:before,.icon-cu-window:before,.icon-home2:before,.icon-cu-monogram:before,.icon-graduation-2:before,.icon-california:before,.icon-food3:before,.icon-toilets_unisex:before,.icon-dumbbell:before,.icon-calculate:before,.icon-coin:before,.icon-bookmark2:before,.icon-checkmark3:before,.icon-pencil5:before,.icon-car:before,.icon-paw:before,.icon-camera:before,.icon-ladder-2:before,.icon-bus:before {
-	font-family: 'icomoon';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
+.icomoon {
+     font-family: "icomoon";
+     speak: none;
+     font-style: normal;
+     font-weight: normal;
+     font-variant: normal;
+     text-transform: none;
+     line-height: 1;
+/*Better font rendering ======*/
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-file-text:before {
+    content: "\e922";
+}
+.icon-google-plus:before {
+    content: "\ea8b";
+}
+.icon-facebook:before {
+    content: "\ea90";
+}
+.icon-instagram:before {
+    content: "\ea92";
+}
+.icon-twitter:before {
+    content: "\ea96";
+}
+.icon-youtube:before {
+    content: "\ea9d";
+}
+.icon-linkedin2:before {
+    content: "\eaca";
+}
+.icon-pinterest:before {
+    content: "\ead1";
+}
+.icon-newspaper:before {
+    content: "\e904";
 }
 .icon-arrows_up:before {
-	content: "\e01a";
+    content: "\e01a";
 }
 .icon-lab3:before {
-	content: "\e009";
+    content: "\e009";
 }
 .icon-hand:before {
-	content: "\e022";
+    content: "\e022";
 }
 .icon-bed:before {
-	content: "\e018";
+    content: "\e018";
 }
 .icon-bathroom:before {
-	content: "\e019";
+    content: "\e019";
 }
 .icon-arrows_down:before {
-	content: "\e01b";
+    content: "\e01b";
 }
 .icon-aid:before {
-	content: "\e01c";
+    content: "\e01c";
 }
 .icon-accessibility2:before {
-	content: "\e01d";
+    content: "\e01d";
 }
 .icon-ladder:before {
-	content: "\e001";
+    content: "\e001";
 }
 .icon-books:before {
-	content: "\e000";
+    content: "\e000";
 }
 .icon-graduation:before {
-	content: "\e01e";
+    content: "\e01e";
 }
 .icon-book2:before {
-	content: "\e024";
+    content: "\e024";
 }
 .icon-direction:before {
-	content: "\e023";
+    content: "\e023";
 }
 .icon-library2:before {
-	content: "\e010";
+    content: "\e010";
 }
 .icon-smiley:before {
-	content: "\e00f";
+    content: "\e00f";
 }
 .icon-heart:before {
-	content: "\e00e";
+    content: "\e00e";
 }
 .icon-bookmark:before {
-	content: "\e00d";
+    content: "\e00d";
 }
 .icon-list:before {
-	content: "\e00c";
+    content: "\e00c";
 }
 .icon-location:before {
-	content: "\e00b";
+    content: "\e00b";
 }
 .icon-link:before {
-	content: "\e002";
+    content: "\e002";
 }
 .icon-earth:before {
-	content: "\e003";
+    content: "\e003";
 }
 .icon-envelop:before {
-	content: "\e00a";
+    content: "\e00a";
 }
 .icon-pencil:before {
-	content: "\e008";
+    content: "\e008";
 }
 .icon-users:before {
-	content: "\e004";
+    content: "\e004";
 }
-.icon-address-book:before {
-	content: "\e005";
+.icon-addressbook:before {
+    content: "\e005";
 }
 .icon-tree:before {
-	content: "\e006";
+    content: "\e006";
 }
 .icon-steps:before {
-	content: "\e007";
+    content: "\e007";
 }
 .icon-office:before {
-	content: "\e011";
+    content: "\e011";
 }
 .icon-star3:before {
-	content: "\e012";
+    content: "\e012";
 }
-.icon-pencil-2:before {
-	content: "\e013";
+.icon-pencil2:before {
+    content: "\e013";
 }
 .icon-heart3:before {
-	content: "\e014";
+    content: "\e014";
 }
 .icon-square:before {
-	content: "\e015";
+    content: "\e015";
 }
 .icon-calculate2:before {
-	content: "\e016";
+    content: "\e016";
 }
 .icon-search3:before {
-	content: "\e017";
+    content: "\e017";
 }
-.icon-location-2:before {
-	content: "\e01f";
+.icon-location2:before {
+    content: "\e01f";
 }
 .icon-print:before {
-	content: "\e020";
+    content: "\e020";
 }
-.icon-books-2:before {
-	content: "\e021";
+.icon-books2:before {
+    content: "\e021";
 }
 .icon-pin:before {
-	content: "\e025";
+    content: "\e025";
 }
 .icon-calendar4:before {
-	content: "\e026";
+    content: "\e026";
 }
 .icon-mic3:before {
-	content: "\e027";
+    content: "\e027";
 }
 .icon-cu-window:before {
-	content: "\e031";
+    content: "\e031";
 }
 .icon-home2:before {
-	content: "\e028";
+    content: "\e028";
 }
 .icon-cu-monogram:before {
-	content: "\e032";
+    content: "\e032";
 }
-.icon-graduation-2:before {
-	content: "\e029";
+.icon-graduation2:before {
+    content: "\e029";
 }
 .icon-california:before {
-	content: "\e033";
+    content: "\e033";
 }
 .icon-food3:before {
-	content: "\e02a";
+    content: "\e02a";
 }
 .icon-toilets_unisex:before {
-	content: "\e034";
+    content: "\e034";
 }
 .icon-dumbbell:before {
-	content: "\e02b";
+    content: "\e02b";
 }
 .icon-calculate:before {
-	content: "\e02d";
+    content: "\e02d";
 }
 .icon-coin:before {
-	content: "\e02c";
+    content: "\e02c";
 }
 .icon-bookmark2:before {
-	content: "\e02e";
+    content: "\e02e";
 }
 .icon-checkmark3:before {
-	content: "\e02f";
+    content: "\e02f";
 }
 .icon-pencil5:before {
-	content: "\e030";
+    content: "\e030";
 }
 .icon-car:before {
-	content: "\e035";
+    content: "\e035";
 }
 .icon-paw:before {
-	content: "\e036";
+    content: "\e036";
 }
 .icon-camera:before {
-	content: "\e037";
+    content: "\e037";
 }
-.icon-ladder-2:before {
-	content: "\e038";
+.icon-ladder2:before {
+    content: "\e038";
 }
 .icon-bus:before {
-	content: "\e039";
+    content: "\e039";
 }
 
