--- a/app/views/widgets/single_column/_contact_footer.html
+++ b/app/views/widgets/single_column/_contact_footer.html
@@ -17,11 +17,11 @@
 		</div>
 		<div class="footer-section social-media">
 			<h3 class="footer-heading">Connect with Us</h3>
-			<ul class="social-media-list">
-				<li><a class="social-link instagram" href="http://www.instagram.com/chapmanu"style="background-image: url(<%= image_url 'instagram.svg' %>);"></a></li>
-				<li><a class="social-link facebook" href="http://www.facebook.com/ChapmanUniversity" style="background-image: url(<%= image_url 'facebook.svg' %>);"></a></li>
-				<li><a class="social-link twitter" href="http://twitter.com/#!/chapmanu" style="background-image: url(<%= image_url 'twitter.svg' %>);"></a></li>
-				<li><a class="social-link blogs" href="http://twitter.com/#!/chapmanu" style="background-image: url(<%= image_url 'blogs.svg' %>);"></a></li>
+			<ul class="social-icon-list">
+				<li><a class="social-link icon-instagram" href="http://www.instagram.com/chapmanu"></a></li>
+				<li><a class="social-link icon-facebook" href="http://www.facebook.com/ChapmanUniversity"></a></li>
+				<li><a class="social-link icon-twitter" href="http://twitter.com/#!/chapmanu"></a></li>
+				<li><a class="social-link icon-newspaper" href="http://twitter.com/#!/chapmanu"></a></li>
 			</ul>
 		</div>
 	</div>
