--- a/app/views/widgets/single_column/_chapman_social_feed.html
+++ b/app/views/widgets/single_column/_chapman_social_feed.html
@@ -3,9 +3,9 @@
     <h2 class="chapman-social-feed-title">Chapman University Social Media</h2>
     <div class="chapman-social-feed-icons">
     	<ul class="social-icon-list">
-    	  <li><a class="social-link instagram" href="http://www.instagram.com/chapmanu"style="background-image: url(<%= image_url 'instagram.svg' %>);"></a></li>
-    	  <li><a class="social-link facebook" href="http://www.facebook.com/ChapmanUniversity" style="background-image: url(<%= image_url 'facebook.svg' %>);"></a></li>
-    	  <li><a class="social-link twitter" href="http://twitter.com/#!/chapmanu" style="background-image: url(<%= image_url 'twitter.svg' %>);"></a></li>
+    	  <li><a class="social-link icon-instagram" href="http://www.instagram.com/chapmanu"></a></li>
+    	  <li><a class="social-link icon-facebook" href="http://www.facebook.com/ChapmanUniversity"></a></li>
+    	  <li><a class="social-link icon-twitter" href="http://twitter.com/#!/chapmanu"></a></li>
     	</ul>
     </div>
     <div class="chapman-social-feed"></div>
