--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -228,7 +228,8 @@
     @include media($large-screen) {
       @include span-columns(7);
       @include shift(9);
-      margin-top: 25%;
+      bottom: 0;
+      margin-bottom: 2%; 
       border-radius: 3px;
       position: absolute;
     }
