fixed subtitles for fb posts in social widget

--- a/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
+++ b/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
@@ -58,6 +58,10 @@ $tile_width: 335px;
 		margin-top: $base-spacing*4;
 	}
 
+	.view_message {
+		box-sizing: content-box;
+	}
+
 	.column {
 		vertical-align: top;
 		display: inline-block;
