chg page bkgd to eaeaea sitewide

--- a/app/assets/stylesheets/layout_old/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/primary-content.scss
@@ -129,7 +129,7 @@
 
 .subRotator {
   padding: 15px 0 0 0;
-  background-color: #ecebe5;
+  background-color: #eaeaea;
   background-repeat: no-repeat;
   background-position: center 0px;
   position: relative;
