remove diamond pattern in background sitewide

--- a/app/assets/stylesheets/base/defaults.scss
+++ b/app/assets/stylesheets/base/defaults.scss
@@ -18,7 +18,7 @@ html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  background-image: image-url('diamond_pattern.gif');
+  //background-image: image-url('diamond_pattern.gif');
   background-color: $cu-light-grey;
   font-family: "proxima-nova-soft", "proxima-nova-soft-n4", sans-serif;
   overflow-x: hidden;
