change footer background sitewide
chg from #e5e4de to #eaeaea (same as page bkgd now)

--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -1,7 +1,7 @@
 // ---------- Main Footer Styles ---------- //
 
 .footer {
-  background-color: #e5e4de;
+  background-color: #eaeaea;
   // background-image: image-url('footerBg.jpg');
   // background-repeat: no-repeat;
   // background-position: left 150px;
