chg left nav menu background
was using cu-off-white variable which I think is #f7f6f0. Chg to #d8d8d8
local in file, not variable.

--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -2,7 +2,8 @@
 	> ul {
     float: left;
     width: 100%;
-    background-color: $cu-off-white;
+    //background-color: $cu-off-white;
+	background-color: #d8d8d8;
     position: relative;
     margin-bottom: $base-spacing*2;
     li { 
