chg left callout bkgd, font and border colors

--- a/app/assets/stylesheets/components/left-nav-sub-content.scss
+++ b/app/assets/stylesheets/components/left-nav-sub-content.scss
@@ -14,14 +14,13 @@
     padding-right: 20px;
   }
 	.callout {
-		background-color: #e2e1dc;
-		border-right: 1px solid #c0c0b8;
-		border-bottom: 1px solid #c0c0b8;
+		background-color:#d8d8d8;
+		border: 1px solid #c1c1c1;
 		vertical-align: top;
 		
 		.border {
 			height: 7px;
-			background-color: #d2d1cd;
+			background-color: #c1c1c1;
 		}
 
 		.editableContent {
