chg news event widget colors

--- a/app/views/3_column/sample.html.erb
+++ b/app/views/3_column/sample.html.erb
@@ -5,7 +5,7 @@
   primary_content:
     - primary_content/featured_news_events_feed_1
     - primary_content/tabs_1
-
+    - primary_content/collapsables_1
   left_column:
     - left_column/news_events_1
     - left_column/calls_to_action_2
