--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -7,8 +7,8 @@
 
 /* News Events Wrapper
 ---------------------------------------- */
-$tab-content-bg-color: #f3f2ee;
-$tab-content-border-color: #cdccc7;
+$tab-content-bg-color: #f5f5f5;
+$tab-content-border-color: #c1c1c1;
 
 .news-events-widget {
   padding: $primary-column-widget-spacing 0;
@@ -63,7 +63,8 @@ $tab-content-border-color: #cdccc7;
 // The clickable tabs
 .newsEventsNav  li {
   // When small, make the tabs collapse.
-  background-color: #e3e2de;
+  background-color: #cfcfcf;
+  color: #383838;
   font-size: 1.1em;
   padding: 0 17px 0 17px;
   line-height: 35px;
@@ -119,7 +120,8 @@ $tab-content-border-color: #cdccc7;
   background-color: $tab-content-bg-color;
   border: 1px solid $tab-content-border-color;
   position: relative;
-  color: $text-color;
+  //color: $text-color;
+  color: #383838;
   clear: both;
   padding: 20px;
   div { margin: 0; }
