chg right column callout (style one) colors

--- a/app/assets/stylesheets/layout_old/right-column.scss
+++ b/app/assets/stylesheets/layout_old/right-column.scss
@@ -22,12 +22,12 @@
     }
   }
   .styleOne {
-    background-color: #e2e1dc;
-    border-right: 1px solid #c0c0b8;
-    border-bottom: 1px solid #c0c0b8;
+    background-color: #d8d8d8;
+    border: 1px solid #c1c1c1;
+	color: #313131;
     vertical-align: top;
     .border {
-      background-color: #d2d1cd;
+      background-color: #c1c1c1;
     }
   }
   .styleTwo {
