--- a/app/views/widgets/right_column/_callout_box_3.html
+++ b/app/views/widgets/right_column/_callout_box_3.html
@@ -1,4 +1,4 @@
 <div class="callout-box-widget callout photo styleOne">
   <img alt="Chapman Fitness Challenge Logo" src="http://cuv-tst-corws03.chapman.edu/students-AFTER-MIGRATION/life/fitness-and-wellness/_files/FitnessCenterLogo_revised.jpg" width="195">
-  <div class="editableContent"><copy></copy></div>
+  <div class="editableContent"><copy><p>Text Here.</p><p>More text here.</p></copy></div>
 </div>
