--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -4,6 +4,9 @@
     width: 100%;
     //background-color: $cu-off-white;
 	background-color: #d8d8d8;
+	border-right: 1px solid #c1c1c1;
+	border-bottom: 1px solid #c1c1c1;
+	border-left: 1px solid #c1c1c1;
     position: relative;
     margin-bottom: $base-spacing*2;
     li { 
