--- a/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
+++ b/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
@@ -3,20 +3,22 @@
 }
 
 .collapsibles-widget .accordion {
-	background-color: $cu-off-white;
+	//background-color: $cu-off-white;
+	background-color: #f5f5f5;
   border: 1px solid #cdcdc7;
   border-radius: 2px;
   margin-bottom: 2px;
 	.ie7 & {
 		zoom: normal;
 		&.active header {
-			background-color: $cu-off-white;
+			//background-color: $cu-off-white;
+			background-color: #f5f5f5;
 		}
     h3 {
       zoom: normal;
     }
     .header {
-		  background-color: #e2e1db;
+		  background-color: #d8d8d8;
 		  overflow: hidden;
 		  width: 100%;
 		}
@@ -28,11 +30,13 @@
   }
 	&.active {
 		header {
-			background-color: $cu-off-white;
+			//background-color: $cu-off-white;
+			background-color: #f5f5f5;
 		}
 		.header {
 			font-weight: 600;
-      background: $cu-off-white;
+      //background: $cu-off-white;
+	  background: #f5f5f5;
 
 			.show {
 	      display: none;
@@ -49,7 +53,7 @@
     width: 100%;
   }
   .header {
-    background-color: #e2e1db;
+    background-color: #d8d8d8;
     font-size: 16px;
     color: #434343;
     padding: 10px 45px 10px 27px;
