--- a/app/assets/stylesheets/themes/law.scss
+++ b/app/assets/stylesheets/themes/law.scss
@@ -7,11 +7,11 @@
     }
 
     .logo {
-        background: image-url('logo_law_alternate.png') ;
+        background: image-url('logo_law_alternate.svg') ;
         // background: image-url('chapman_logo_horizonal_stacked.svg'), linear-gradient(transparent, transparent);
         background-repeat: no-repeat;
-        height: 68px;
-        width: 238px;
+        height: 57px;
+        width: 200px;
         margin: 0 auto $base-spacing auto;
         @include bp(m) { margin: 0 $base-spacing $base-spacing $base-spacing;}
         @include media(1120px) { margin: -25px $base-spacing 0 0; }
