--- a/app/assets/stylesheets/components/left-nav-sub-content.scss
+++ b/app/assets/stylesheets/components/left-nav-sub-content.scss
@@ -3,9 +3,9 @@
   margin: 0 0 0 0;
   float: left;
 
-	a, a:visited {
-    border-bottom: 1px dotted #C0C0C0;
-  }
+	//a, a:visited {
+    //border-bottom: 1px dotted #C0C0C0;
+  //}
   .social {
     margin: 0 0 0 25px;
   }
