Update background color of tabs in inactive and hover states, and added action buttons to right column sample pages

--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -92,7 +92,7 @@ $tab-content-border-color: #c1c1c1;
     transition: padding 200ms;
   }
   &:hover {
-    background-color: #e0e0dd;
+    background-color: #d8d8d8;
     color: $link-color;
   }
   &.active { // The selected tab
