--- a/app/assets/stylesheets/widgets/primary_column/tabs.scss
+++ b/app/assets/stylesheets/widgets/primary_column/tabs.scss
@@ -18,7 +18,7 @@
 // The clickable tabs
 .tabs-nav  li {
   // When small, make the tabs collapse.
-  background-color: #d8d8d8;
+  background-color: #cfcfcf;
   font-size: 1.1em;
   padding: 0 17px 0 17px;
   line-height: 35px;
@@ -39,7 +39,7 @@
   }
 
   &:hover {
-    background-color: #e0e0dd;
+    background-color: #d8d8d8;
     color: $link-color;
   }
   &.active { // The selected tab
