--- a/app/views/3_column/sample.html.erb
+++ b/app/views/3_column/sample.html.erb
@@ -11,6 +11,7 @@
     - left_column/calls_to_action_2
 
   right_column:
+    - right_column/action_buttons
     - right_column/callout_box_3
 
   YAML
