Update width, height, and margin of CU main and Law logos.

--- a/app/assets/stylesheets/components/main_navigation.scss
+++ b/app/assets/stylesheets/components/main_navigation.scss
@@ -72,11 +72,11 @@
     float: left;
     display: block;
     position: static;
-    height: 45px;
-    width: 265px;
+    height: 38px;
+    width: 200px;
   }
   @media (min-width: 1120px) {
-    margin: 0;
+    margin: 3px 20px 0 0;
   }
 }
 
