--- a/app/assets/stylesheets/themes/law.scss
+++ b/app/assets/stylesheets/themes/law.scss
@@ -12,9 +12,13 @@
         background-repeat: no-repeat;
         height: 57px;
         width: 200px;
+        // margin: 0 auto $base-spacing auto;
+        // @include bp(m) { margin: 0 $base-spacing $base-spacing $base-spacing;}
+        // @include media(1120px) { margin: -25px $base-spacing 0 0; 
         margin: 0 auto $base-spacing auto;
         @include bp(m) { margin: 0 $base-spacing $base-spacing $base-spacing;}
-        @include media(1120px) { margin: -25px $base-spacing 0 0; }
+        @include media(1120px) { margin: -13px $base-spacing 0 0; 
+        }
     }
 
     .collapsedNav {
