--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -12,7 +12,7 @@ $cu-red-rgb-transparent: rgba(168,36,57,0.95);
 // $cu-red3: #98002E; // Old red replaced by $cu-red to keep colors standard
 $cu-dark-red: #851c2b;
 $cu-off-white: #f7f6f0;
-$cu-light-grey: #ECEBE5;
+$cu-light-grey: #eaeaea;
 $cu-warm-light-grey: #EDEADE;
 
 $white: #fff;
