--- a/app/assets/stylesheets/layout_old/form.scss
+++ b/app/assets/stylesheets/layout_old/form.scss
@@ -51,8 +51,8 @@
 }
 
 .responsiveForm {
-    background-color: #f7f6f0;
-    color: #4A4949;
+    background-color: #f5f5f5;
+    color: #313131;
     padding: 25px 45px 45px; 
 }
 
