--- a/app/assets/stylesheets/layout_old/form.scss
+++ b/app/assets/stylesheets/layout_old/form.scss
@@ -16,10 +16,10 @@
 /* Old form styles */
 .form {
   padding: 10px 45px;
-  background-color: #E5E2CF;
+  background-color: #f5f5f5;
   border-left: 1px solid $white;
   border-bottom: 1px solid $cu-border;
-  color: #4A4949;
+  color: #313131;
   div {
     margin: 7px 0;
   }
