chg bkgd color, font color and border for right column simple-form

--- a/app/assets/stylesheets/widgets/side_column/simple_form.scss
+++ b/app/assets/stylesheets/widgets/side_column/simple_form.scss
@@ -1,4 +1,8 @@
 .simple-form-widget {
+	background-color: #d8d8d8;
+    border: 1px solid #c1c1c1;
+	color: #313131;
+	
   input[type="text"],
   textarea {
     width: 100%;
