--- a/app/assets/stylesheets/widgets/side_column/simple_form.scss
+++ b/app/assets/stylesheets/widgets/side_column/simple_form.scss
@@ -17,6 +17,11 @@
   	margin-left: 2px;
   }
   
+  	input[type=radio]+label,
+	input[type=checkbox]+label {
+		font-weight: normal;
+	}
+  
   h2 {
   	padding: 0 4px;
   }
