Added widgets to sample page, updated cu-red variable to #98002e.

--- a/app/views/3_column/sample.html.erb
+++ b/app/views/3_column/sample.html.erb
@@ -6,13 +6,25 @@
     - primary_content/featured_news_events_feed_1
     - primary_content/tabs_1
     - primary_content/collapsables_1
+
   left_column:
-    - left_column/news_events_1
+    - left_column/callout_1
+    - left_column/callout_2
+    - left_column/callout_3
+    - left_column/calls_to_action_1
     - left_column/calls_to_action_2
+    - left_column/news_events_1
 
   right_column:
     - right_column/action_buttons
+    - right_column/callout_box_1
+    - right_column/callout_box_2
     - right_column/callout_box_3
+    - right_column/flickr_gallery
+    - right_column/picasa_gallery
+    - right_column/simple_form
+    - right_column/sponsor_box_small
+    - right_column/sponsor_logo_rotator
 
   YAML
 %>
