chg spacing and bolding on labels, legends on right col simple form

--- a/app/views/widgets/right_column/_simple_form.html
+++ b/app/views/widgets/right_column/_simple_form.html
@@ -71,8 +71,8 @@ function validate() {
        </div>
         <div> 
               
-             <p>Areas of interest:<br>(check all that apply)</p>
           <fieldset>
+          <legend>Areas of interest:<br>(check all that apply)</legend>
               <input id="business_law" name="emphasis_area" type="checkbox" value="Business Law"><label for="business_law">Business Law</label>              
               <br>            
               <input id="entertainment_law" name="emphasis_area" type="checkbox" value="Entertainment and Media Law"><label for="entertainment_law">Entertainment/Media Law</label>
@@ -87,8 +87,8 @@ function validate() {
                
                   
               </fieldset>
-            <br><br>  
-            Comments:
+
+            <label for="comments">Comments:</label>
             <textarea cols="50" id="comments" name="comments" rows="4"></textarea>
        </div>
        <div><input name="submit" type="submit" value="Submit">
