--- a/app/assets/stylesheets/widgets/side_column/simple_form.scss
+++ b/app/assets/stylesheets/widgets/side_column/simple_form.scss
@@ -6,20 +6,28 @@
   input[type="text"],
   textarea {
     width: 100%;
+	margin-top: 10px
   }
 
   input[type="submit"] {
     width: 100%;
+	margin-top: 10px;
   }
 
   label {
-  	display: inline;
+  	/*display: inline;*/
   	margin-left: 2px;
+	margin-top: 10px;
   }
   
+  legend {
+  	font-weight: bold;
+	margin-top: 10px;
+  }
   	input[type=radio]+label,
 	input[type=checkbox]+label {
 		font-weight: normal;
+		display: inline;
 	}
   
   h2 {
@@ -27,7 +35,7 @@
   }
   
   .editableContent {
-  	padding: 0 4px;
+  	padding: 2px 4px;
   }
 
   padding: 16px;
