--- a/app/assets/stylesheets/widgets/side_column/simple_form.scss
+++ b/app/assets/stylesheets/widgets/side_column/simple_form.scss
@@ -1,6 +1,6 @@
 .simple-form-widget {
 	background-color: #d8d8d8;
-    border: 1px solid #c1c1c1;
+  border: 1px solid #c1c1c1;
 	color: #313131;
 	
   input[type="text"],
@@ -39,4 +39,9 @@
   }
 
   padding: 16px;
+}
+
+.form-widget {
+  border: 1px solid #c1c1c1;
+
 }
