--- a/app/assets/stylesheets/components/common.scss
+++ b/app/assets/stylesheets/components/common.scss
@@ -243,7 +243,8 @@ th.header-light {
 }
 
 .tweetbox {
-  margin: 0 0 1em 0;
+  border:1px solid #c1c1c1;
+  margin: 0 ;
   iframe {
     width: 100% !important;
   }
