--- a/app/assets/stylesheets/components/editable_content.scss
+++ b/app/assets/stylesheets/components/editable_content.scss
@@ -10,9 +10,12 @@
 
   img {
     margin: 0 $base-spacing $base-spacing $base-spacing;
-    padding: 3px;
+    padding: 10px;
     background-color: #fff;
-    box-shadow: 1px 1px 2px rgba(50, 50, 50, 0.25);
+    //border: 1px solid #c1c1c1;
+    -webkit-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
 
     &[align="left"] {
       margin-left: 0;
