--- a/app/assets/stylesheets/layout_old/admission/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/admission/primary-content.scss
@@ -4,10 +4,12 @@
   .featureImage {
     float: left;
     margin: 0px 10px 10px 0;
-    border: 3px solid white;
-    -webkit-box-shadow: 0px 0px 7px #434343;
-    -moz-box-shadow: 0px 0px 7px #434343;
-    box-shadow: 0px 0px 7px #434343;
+    //border: 1px solid #c1c1c1;
+    padding: 10px;
+    background: #ffffff;
+    -webkit-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
   }
   section {
   	.content {
