--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -145,9 +145,11 @@ $tab-content-border-color: #c1c1c1;
     clear: left;
   }
   .image {
-    box-shadow: 0px 8px 8px -4px rgba(0,0,0,0.3);
-    margin: 0 20px 20px 0;
+    margin: 1px 20px 20px 1px;
+    padding: 10px;
+    background: #ffffff;
     height: auto;
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
   }
   .col1 {
     float: left;
