--- a/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
+++ b/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
@@ -5,7 +5,7 @@
 .collapsibles-widget .accordion {
 	//background-color: $cu-off-white;
 	background-color: #f5f5f5;
-  border: 1px solid #cdcdc7;
+  border: 1px solid #c1c1c1;
   border-radius: 2px;
   margin-bottom: 2px;
 	.ie7 & {
