--- a/app/assets/stylesheets/widgets/primary_column/personnel_region.scss
+++ b/app/assets/stylesheets/widgets/primary_column/personnel_region.scss
@@ -12,7 +12,7 @@
     }
 
     position: relative;
-    border-bottom: 1px solid $cu-border;
+    border-bottom: 1px solid #c1c1c1;
     padding: $base-spacing*1 0;
     padding-left: 145px;
     height: auto;
@@ -28,7 +28,14 @@
     position: absolute;
     top: $base-spacing*1;
     left: 0;
-    border-radius: 3px;
+    //border-radius: 3px;
+    //border:10px solid white;
+    //border:1px solid #c1c1c1;
+    background: #ffffff;
+    padding:10px;
+    -webkit-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
   }
 
   .name {
