--- a/app/assets/stylesheets/widgets/three-box-callout.scss
+++ b/app/assets/stylesheets/widgets/three-box-callout.scss
@@ -5,10 +5,12 @@
     display: inline-block;
     float: none;
     margin: 0 0 20px 12px;
-    border: 6px solid $white;
-    -webkit-box-shadow: 0px 0px 6px #434343;
-    -moz-box-shadow: 0px 0px 6px #434343;
-    box-shadow: 0px 0px 6px #434343;
+    //border: 1px solid #c1c1c1;
+    padding: 10px;
+    background: #ffffff;
+    -webkit-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
     position: relative;
     word-wrap: normal;
     width: 160px;
@@ -29,7 +31,7 @@
     }
     .caption {
       height: 50px;
-      background-color: $teal2;
+      background-color: #98002e;
       top: 0px;
       .text {
         text-align: center;
