--- a/app/views/3_column/sample.html.erb
+++ b/app/views/3_column/sample.html.erb
@@ -3,9 +3,16 @@
 
 <%= widgets <<-YAML
   primary_content:
-    - primary_content/featured_news_events_feed_1
-    - primary_content/tabs_1
+    - primary_content/carousel_1
+    - primary_content/carousel_2
     - primary_content/collapsables_1
+    - primary_content/featured_news_events_feed_1
+    - primary_content/form_1
+    - primary_content/funnel_boxes_1
+    - primary_content/personnel_region_1
+    - primary_content/tabs_1
+    - primary_content/three_photo_callout_1
+    - primary_content/twitter_feed_1
 
   left_column:
     - left_column/callout_1
