Update masthead bg color from teal to CU red and update leftnav UL bottom margin per Ross.

--- a/app/assets/stylesheets/components/big-masthead.scss
+++ b/app/assets/stylesheets/components/big-masthead.scss
@@ -156,7 +156,7 @@
     }
   }
 	.masthead-old {
-		background-color: $teal2-hover;
+		background-color: $cu-red;
 		max-width: 1024px;
 		min-height: 83px;
 		margin: 5px auto 0;
@@ -220,7 +220,7 @@
     }
   }
   .mastheadPlaceholder {
-    background-color: $teal2-hover;
+    background-color: $cu-red;
     bottom: 30px;
     max-width: 1130px;  
     min-height: 83px;
