--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -8,7 +8,7 @@
 	border-bottom: 1px solid #c1c1c1;
 	border-left: 1px solid #c1c1c1;
     position: relative;
-    margin-bottom: $base-spacing*2;
+    margin-bottom: $base-spacing;
     li { 
       list-style-type: none;
       margin: 0;
