Update widget spacing

--- a/app/assets/stylesheets/widgets/primary_column/carousel.scss
+++ b/app/assets/stylesheets/widgets/primary_column/carousel.scss
@@ -43,7 +43,8 @@
   border: 0 solid;
   color: inherit;
   font-size: inherit;
-  margin: $primary-column-widget-spacing 0;
+  //margin: $primary-column-widget-spacing 0;
+  margin: 0 0 20px 0;
   text-decoration: none;
   vertical-align: inherit;
   height: 0;
