--- a/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
+++ b/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
@@ -1,5 +1,6 @@
 .collapsibles-widget {
-  padding: $primary-column-widget-spacing 0;
+  //padding: $primary-column-widget-spacing 0;
+  margin: 0 0 20px 0;
 }
 
 .collapsibles-widget .accordion {
