--- a/app/assets/stylesheets/widgets/primary_column/tabs.scss
+++ b/app/assets/stylesheets/widgets/primary_column/tabs.scss
@@ -1,5 +1,6 @@
 .tabs-widget {
-  padding: $primary-column-widget-spacing 0;
+  //padding: $primary-column-widget-spacing 0;
+  margin: 0 0 20px 0;
 }
 
 // The navigation container
