--- a/app/assets/stylesheets/widgets/three-box-callout.scss
+++ b/app/assets/stylesheets/widgets/three-box-callout.scss
@@ -1,5 +1,6 @@
 .midPhotoCallouts {
-  margin: 15px 0 5px 0;
+  //margin: 15px 0 5px 0;
+  margin: 0 0 20px 0;
   text-align: center;
   .photoCallout {
     display: inline-block;
