--- a/app/views/3_column/sample.html.erb
+++ b/app/views/3_column/sample.html.erb
@@ -3,6 +3,7 @@
 
 <%= widgets <<-YAML
   primary_content:
+    - primary_content/regions_1
     - primary_content/carousel_1
     - primary_content/carousel_2
     - primary_content/collapsables_1
