--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -8,7 +8,8 @@
 	border-bottom: 1px solid #c1c1c1;
 	border-left: 1px solid #c1c1c1;
     position: relative;
-    margin-bottom: $base-spacing;
+    //margin-bottom: $base-spacing;
+    margin-bottom: 20px;
     li { 
       list-style-type: none;
       margin: 0;
