--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -11,7 +11,8 @@ $tab-content-bg-color: #f5f5f5;
 $tab-content-border-color: #c1c1c1;
 
 .news-events-widget {
-  padding: $primary-column-widget-spacing 0;
+  //padding: $primary-column-widget-spacing 0;
+  padding: 0 0 20px 0;
 }
 
 .newsEvents {
