--- a/app/assets/stylesheets/components/common.scss
+++ b/app/assets/stylesheets/components/common.scss
@@ -244,7 +244,7 @@ th.header-light {
 
 .tweetbox {
   border:1px solid #c1c1c1;
-  margin: -20px 0 0 0 ;
+  margin: 0 0 20px 0 ;
   iframe {
     width: 100% !important;
   }
