--- a/app/views/3_column/sample.html.erb
+++ b/app/views/3_column/sample.html.erb
@@ -14,6 +14,9 @@
     - primary_content/tabs_1
     - primary_content/three_photo_callout_1
     - primary_content/twitter_feed_1
+    - primary_content/sponsor_box_1
+    - primary_content/sponsor_box_2
+    - primary_content/sponsor_logos_1
 
   left_column:
     - left_column/callout_1
