--- a/app/assets/stylesheets/layout_old/phase4_masthead.scss
+++ b/app/assets/stylesheets/layout_old/phase4_masthead.scss
@@ -1,3 +1,4 @@
+/* classes duplicated, this one is the one being used but this needs to retire */
 /* styles for new (and old) mastheads, separated from level_2013.css */
 
  /*
@@ -17,7 +18,7 @@
     padding: 5px 5% 5px 5%;
 }
 .bigMasthead .masthead-old {
-    background-color: #01CDD4;
+    background-color: $cu_red;
     max-width: 1024px;
     min-height: 83px;
     margin: 5px auto 0;
