--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -3,7 +3,8 @@
 
 <%= widgets <<-YAML
 
-  masthead: masthead/boxes_1
+  masthead: masthead/slider_1
+  
 
   primary_content:
     - primary_content/tabs_1
