add margin bottom to new summaryText class for copy above collapsibles

--- a/app/views/widgets/primary_content/_collapsables_1.html
+++ b/app/views/widgets/primary_content/_collapsables_1.html
@@ -1,4 +1,8 @@
 <div class="collapsibles-widget">
+<h2 class="sectionHeader">This is the header within collapsibles widget</h2>
+                <div class="editableContent summaryText"><p>This is summary text above the collapsibles which is still part of the widget. This example does have P tags surrounding the text.</p></div>
+                
+                
     <div class="accordion active">
         <h2 class="header">
                         <span class="show">+</span>
