--- a/app/views/widgets/primary_content/_collapsables_2.html
+++ b/app/views/widgets/primary_content/_collapsables_2.html
@@ -1,4 +1,8 @@
 <div class="collapsibles-widget">
+
+<h2 class="sectionHeader">This is the header within collapsibles widget</h2>
+                <div class="editableContent summaryText">This is summary text above the collapsibles which is still part of the widget. This example will not have any P tags</div>                
+                
     <div class="accordion">
         <h2 class="header">
                     <span class="show">+</span>
