--- a/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
+++ b/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
@@ -3,6 +3,10 @@
   margin: 0 0 20px 0;
 }
 
+.collapsibles-widget .summaryText {
+	margin-bottom:10px;
+}
+
 .collapsibles-widget .accordion {
 	//background-color: $cu-off-white;
 	background-color: #f5f5f5;
