--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -7,8 +7,9 @@
   
 
   primary_content:
-    - primary_content/tabs_1
-
+    - primary_content/collapsables_1
+    - primary_content/collapsables_2
+    - primary_content/collapsables_3
   left_column:
     - left_column/callout_2
     - left_column/callout_3
