--- a/app/views/widgets/primary_content/_collapsables_1.html
+++ b/app/views/widgets/primary_content/_collapsables_1.html
@@ -1,14 +1,14 @@
 <div class="collapsibles-widget">
-<h2 class="sectionHeader">This is the header within collapsibles widget</h2>
-                <div class="editableContent summaryText"><p>This is summary text above the collapsibles which is still part of the widget. This example does have P tags surrounding the text.</p></div>
+<h2 class="sectionHeader">This is the H2 main header within collapsibles widget</h2>
+                <div class="editableContent summaryText"><p>This is summary text above the collapsibles which is still part of the widget. This example does have P tags surrounding the text. Since summary header is present, the collapsible headers will now be H3 so the main header can be an H2</p></div>
                 
                 
     <div class="accordion active">
-        <h2 class="header">
+        <h3 class="header">
                         <span class="show">+</span>
                         <span class="hide">-</span>
                                             Header 1
-                    </h2>
+                    </h3>
         <div class="content editableContent">
             <ul>
                 <li>Lebowski ipsum yes, so we were informed.</li>
@@ -21,11 +21,11 @@
         </div>
     </div>
     <div class="accordion">
-        <h2 class="header">
+        <h3 class="header">
                         <span class="show">+</span>
                         <span class="hide">-</span>
                                             Header 2
-                    </h2>
+                    </h3>
         <div class="content editableContent">
             <p>Just me and Charlie, man, eyeball to eyeball. Posuere neque, at dignissim magna ullamcorper in aliquam sagittis massa. This Chinaman is not the issue! Ac tortor ultrices faucibus curabitur eu. Walter, this isn't a First Amendment thing. Mi sapien, ut ultricies ipsum morbi eget. Ja, vee could really do it, Lebowski. Risus nulla nullam vel nisi enim, vel auctor ante morbi id urna vel. You don't go out and make a living dressed like that in the middle of a weekday. Felis lacinia placerat vestibulum turpis nulla, viverra nec volutpat ac, ornare id lectus cras.</p>
             <p><img alt="image" height="337" src="http://www.amusingtime.com/images/07/funny-squirrel-go-on-without-me.jpg" width="485" />
@@ -33,11 +33,11 @@
         </div>
     </div>
     <div class="accordion">
-        <h2 class="header">
+        <h3 class="header">
                         <span class="show">+</span>
                         <span class="hide">-</span>
                                             Header 3
-                    </h2>
+                    </h3>
         <div class="content editableContent">
             When will you find these guys? I mean, do you have any promising leads? Pharetra faucibus tristique nullam non accumsan justo nulla facilisi integer interdum elementum. A way out west there was a fella, fella I want to tell you about, fella by the name of Jeff Lebowski. At least, that was the handle his lovin' parents gave him, but he never had much use for it himself. This Lebowski, he called himself the Dude. Now, Dude, that's a name no one would self-apply where I come from. But then, there was a lot about the Dude that didn't make a whole lot of sense to me. And a lot about where he lived, likewise. But then again, maybe that's why I found the place s'durned innarestin'. Nulla, nec eleifend nisl euismod ac maecenas vitae eros velit, eu suscipit.
         </div>
